--- a/js_predefined_functions.html
+++ b/js_predefined_functions.html
@@ -1,73 +1,149 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>JavaScript String and Math Functions</title>
-  <style>
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-h2 {
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
-p {
-  margin-bottom: 15px;
-}
-li {
-  margin-bottom: 5px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript String and Math Methods</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        code {
+            background-color: #e8e8e8;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-size: 1.2em;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .example {
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+        .output {
+            font-weight: bold;
+            color: green;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1><u>JavaScript String and Math Functions</u></h1>
+
+    <h1>JavaScript String and Math Methods</h1>
+
     <div class="section">
-      <h2><u>String Functions</u></h2>
-      <ul>
-        <li>length: Returns the length of a string.</li>
-        <li>toUpperCase(): Converts a string to uppercase.</li>
-        <li>toLowerCase(): Converts a string to lowercase.</li>
-        <li>indexOf(): Returns the index of the first occurrence of a specified substring.</li>
-        <li>lastIndexOf(): Returns the index of the last occurrence of a specified substring.</li>
-      </ul>
+        <h2>String Methods</h2>
+        <p>JavaScript provides several methods to manipulate strings. Below are some of the most commonly used string methods:</p>
+
+        <div class="example">
+            <h3>1. <code>toUpperCase()</code></h3>
+            <p>Converts all characters of the string to uppercase.</p>
+            <code>let str = "hello";</code><br>
+            <code>let upperStr = str.toUpperCase();</code><br>
+            <p class="output">Output: <span id="upperStr"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>2. <code>toLowerCase()</code></h3>
+            <p>Converts all characters of the string to lowercase.</p>
+            <code>let str = "HELLO";</code><br>
+            <code>let lowerStr = str.toLowerCase();</code><br>
+            <p class="output">Output: <span id="lowerStr"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>3. <code>charAt()</code></h3>
+            <p>Returns the character at a specific index in a string.</p>
+            <code>let str = "hello";</code><br>
+            <code>let char = str.charAt(1);</code><br>
+            <p class="output">Output: <span id="charAt"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>4. <code>slice()</code></h3>
+            <p>Extracts a part of the string between two specified indices.</p>
+            <code>let str = "hello world";</code><br>
+            <code>let slicedStr = str.slice(0, 5);</code><br>
+            <p class="output">Output: <span id="sliceStr"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>5. <code>replace()</code></h3>
+            <p>Searches for a pattern and replaces it with a new substring.</p>
+            <code>let str = "hello world";</code><br>
+            <code>let newStr = str.replace("world", "JavaScript");</code><br>
+            <p class="output">Output: <span id="replaceStr"></span></p>
+        </div>
+
     </div>
 
     <div class="section">
-      <h2><u>Math Functions</u></h2>
-      <ul>
-        <li>Math.round(): Rounds a number to the nearest integer.</li>
-        <li>Math.ceil(): Rounds a number up to the nearest integer.</li>
-        <li>Math.abs(): Returns the absolute value of a number.</li>
-        <li>Math.sqrt(): Returns the square root of a number.</li>
-        <li>Math.pow(): Returns the base to the exponent power.</li>
-      </ul>
-    </div>
-  </div>
-<script>
-        // Example of using string functions
-        let str = "Hello, World!";
-        console.log(str.length); 
-        console.log(str.toUpperCase()); 
-        console.log(str.indexOf("World"));
+        <h2>Math Methods</h2>
+        <p>JavaScript's <code>Math</code> object provides a variety of methods for mathematical operations. Here are some commonly used Math methods:</p>
 
-        // Example of using math functions
-        let num1 = 4.7;
-        let num2 = 2.3;
-        console.log(Math.round(num1)); 
-        console.log(Math.ceil(num2)); 
-        console.log(Math.sqrt(16)); 
-        console.log(Math.random()); 
+        <div class="example">
+            <h3>1. <code>Math.max()</code></h3>
+            <p>Returns the largest of the zero or more numbers provided as input.</p>
+            <code>let max = Math.max(1, 3, 2, 8, 5);</code><br>
+            <p class="output">Output: <span id="max"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>2. <code>Math.min()</code></h3>
+            <p>Returns the smallest of the zero or more numbers provided as input.</p>
+            <code>let min = Math.min(1, 3, 2, -8, 5);</code><br>
+            <p class="output">Output: <span id="min"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>3. <code>Math.random()</code></h3>
+            <p>Generates a random number between 0 (inclusive) and 1 (exclusive).</p>
+            <code>let randomNum = Math.random();</code><br>
+            <p class="output">Output: <span id="randomNum"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>4. <code>Math.round()</code></h3>
+            <p>Rounds a number to the nearest integer.</p>
+            <code>let roundedNum = Math.round(4.6);</code><br>
+            <p class="output">Output: <span id="roundedNum"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>5. <code>Math.pow()</code></h3>
+            <p>Returns the base raised to the exponent power.</p>
+            <code>let power = Math.pow(2, 3);</code><br>
+            <p class="output">Output: <span id="pow"></span></p>
+        </div>
+    </div>
+
+    <script>
+        // String Method Examples
+        let str1 = "hello";
+        let str2 = "HELLO";
+        let str3 = "hello world";
+        
+        document.getElementById("upperStr").textContent = str1.toUpperCase();
+        document.getElementById("lowerStr").textContent = str2.toLowerCase();
+        document.getElementById("charAt").textContent = str1.charAt(1);
+        document.getElementById("sliceStr").textContent = str3.slice(0, 5);
+        document.getElementById("replaceStr").textContent = str3.replace("world", "JavaScript");
+
+        // Math Method Examples
+        document.getElementById("max").textContent = Math.max(1, 3, 2, 8, 5);
+        document.getElementById("min").textContent = Math.min(1, 3, 2, -8, 5);
+        document.getElementById("randomNum").textContent = Math.random().toFixed(2);
+        document.getElementById("roundedNum").textContent = Math.round(4.6);
+        document.getElementById("pow").textContent = Math.pow(2, 3);
     </script>
+
 </body>
 </html>
