--- a/form/js_form_validate.html
+++ b/form/js_form_validate.html
@@ -1,1 +1,129 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration Form</title>
+  <style>
+    .error { color: red; }
+    form { max-width: 400px; margin: auto; padding: 20px; }
+    label, input, select { display: block; width: 100%; margin: 5px 0; }
+    .submit-btn { margin-top: 10px; }
+  </style>
+</head>
+<body>
+
+  <form id="registrationForm" onsubmit="return validateForm()">
+    <h2>Registration Form</h2>
+    
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="fname">
+    <div id="fnameError" class="error"></div>
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lname">
+    <div id="lnameError" class="error"></div>
+
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username">
+    <div id="usernameError" class="error"></div>
+
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password">
+    <div id="passwordError" class="error"></div>
+
+    <label for="gender">Gender</label>
+    <select id="gender" name="gender">
+      <option value="">Select Gender</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+      <option value="other">Other</option>
+    </select>
+    <div id="genderError" class="error"></div>
+
+    <label for="mobile">Mobile</label>
+    <input type="text" id="mobile" name="mobile">
+    <div id="mobileError" class="error"></div>
+
+    <label for="address">Address</label>
+    <textarea id="address" name="address"></textarea>
+    <div id="addressError" class="error"></div>
+
+    <label for="email">Email ID</label>
+    <input type="email" id="email" name="email">
+    <div id="emailError" class="error"></div>
+
+    <button type="submit" class="submit-btn">Register</button>
+  </form>
+
+  <script>
+    function validateForm() {
+      let isValid = true;
+
+      // Clear all previous errors
+      document.querySelectorAll('.error').forEach(error => error.textContent = '');
+
+      // First Name validation
+      const fname = document.getElementById('fname').value.trim();
+      if (fname === '') {
+        document.getElementById('fnameError').textContent = 'First name is required';
+        isValid = false;
+      }
+
+      // Last Name validation
+      const lname = document.getElementById('lname').value.trim();
+      if (lname === '') {
+        document.getElementById('lnameError').textContent = 'Last name is required';
+        isValid = false;
+      }
+
+      // Username validation
+      const username = document.getElementById('username').value.trim();
+      if (username === '') {
+        document.getElementById('usernameError').textContent = 'Username is required';
+        isValid = false;
+      }
+
+      // Password validation
+      const password = document.getElementById('password').value;
+      if (password.length < 8) {
+        document.getElementById('passwordError').textContent = 'Password must be at least 8 characters';
+        isValid = false;
+      }
+
+      // Gender validation
+      const gender = document.getElementById('gender').value;
+      if (gender === '') {
+        document.getElementById('genderError').textContent = 'Gender is required';
+        isValid = false;
+      }
+
+      // Mobile validation
+      const mobile = document.getElementById('mobile').value.trim();
+      const mobilePattern = /^[0-9]{10}$/;
+      if (!mobilePattern.test(mobile)) {
+        document.getElementById('mobileError').textContent = 'Mobile must be 10 digits';
+        isValid = false;
+      }
+
+      // Address validation
+      const address = document.getElementById('address').value.trim();
+      if (address === '') {
+        document.getElementById('addressError').textContent = 'Address is required';
+        isValid = false;
+      }
+
+      // Email validation
+      const email = document.getElementById('email').value.trim();
+      const emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
+      if (!emailPattern.test(email)) {
+        document.getElementById('emailError').textContent = 'Invalid email format';
+        isValid = false;
+      }
+
+      return isValid;
+    }
+  </script>
+
+</body>
+</html>
