--- a/form/js_form_validate.html
+++ b/form/js_form_validate.html
@@ -111,73 +111,80 @@ button.submit-btn {
   </div>
 
   <script>
-    function validateForm() {
-      let isValid = true;
+  function validateForm() {
+    let isValid = true;
 
-      // Clear all previous errors
-      document.querySelectorAll('.error').forEach(error => error.textContent = '');
+    // Clear all previous errors
+    document.querySelectorAll('.error').forEach(error => error.textContent = '');
 
-      // First Name validation
-      const fname = document.getElementById('fname').value.trim();
-      if (fname === '') {
-        document.getElementById('fnameError').textContent = 'First name is required';
-        isValid = false;
-      }
-
-      // Last Name validation
-      const lname = document.getElementById('lname').value.trim();
-      if (lname === '') {
-        document.getElementById('lnameError').textContent = 'Last name is required';
-        isValid = false;
-      }
-
-      // Username validation
-      const username = document.getElementById('username').value.trim();
-      if (username === '') {
-        document.getElementById('usernameError').textContent = 'Username is required';
-        isValid = false;
-      }
-
-      // Password validation
-      const password = document.getElementById('password').value;
-      if (password.length < 8) {
-        document.getElementById('passwordError').textContent = 'Password must be at least 8 characters';
-        isValid = false;
-      }
-
-      // Gender validation
-      const gender = document.getElementById('gender').value;
-      if (gender === '') {
-        document.getElementById('genderError').textContent = 'Gender is required';
-        isValid = false;
-      }
-
-      // Mobile validation
-      const mobile = document.getElementById('mobile').value.trim();
-      const mobilePattern = /^[0-9]{10}$/;
-      if (!mobilePattern.test(mobile)) {
-        document.getElementById('mobileError').textContent = 'Mobile must be 10 digits';
-        isValid = false;
-      }
-
-      // Address validation
-      const address = document.getElementById('address').value.trim();
-      if (address === '') {
-        document.getElementById('addressError').textContent = 'Address is required';
-        isValid = false;
-      }
-
-      // Email validation
-      const email = document.getElementById('email').value.trim();
-      const emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
-      if (!emailPattern.test(email)) {
-        document.getElementById('emailError').textContent = 'Invalid email format';
-        isValid = false;
-      }
-
-      return isValid;
+    // First Name validation
+    const fname = document.getElementById('fname').value.trim();
+    if (fname === '') {
+      document.getElementById('fnameError').textContent = 'First name is required';
+      isValid = false;
     }
-  </script>
+
+    // Last Name validation
+    const lname = document.getElementById('lname').value.trim();
+    if (lname === '') {
+      document.getElementById('lnameError').textContent = 'Last name is required';
+      isValid = false;
+    }
+
+    // Username validation
+    const username = document.getElementById('username').value.trim();
+    if (username === '') {
+      document.getElementById('usernameError').textContent = 'Username is required';
+      isValid = false;
+    }
+
+    // Password validation
+    const password = document.getElementById('password').value;
+    if (password.length < 8) {
+      document.getElementById('passwordError').textContent = 'Password must be at least 8 characters';
+      isValid = false;
+    }
+
+    // Gender validation
+    const gender = document.getElementById('gender').value;
+    if (gender === '') {
+      document.getElementById('genderError').textContent = 'Gender is required';
+      isValid = false;
+    }
+
+    // Mobile validation
+    const mobile = document.getElementById('mobile').value.trim();
+    const mobilePattern = /^[0-9]{10}$/;
+    if (!mobilePattern.test(mobile)) {
+      document.getElementById('mobileError').textContent = 'Mobile must be 10 digits';
+      isValid = false;
+    }
+
+    // Address validation
+    const address = document.getElementById('address').value.trim();
+    if (address === '') {
+      document.getElementById('addressError').textContent = 'Address is required';
+      isValid = false;
+    }
+
+    // Email validation
+    const email = document.getElementById('email').value.trim();
+    const emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
+    if (!emailPattern.test(email)) {
+      document.getElementById('emailError').textContent = 'Invalid email format';
+      isValid = false;
+    }
+
+    // Show success message if form is valid
+    if (isValid) {
+      alert("Successfully registered");
+      return false; // Prevent form submission for demonstration
+    }
+
+    return isValid; // Proceed with form submission if valid
+  }
+</script>
+
 
 </body>
 </html>
